Create new entity done

--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
             </div>
         </div>
         <div class="list-view">
+            <h2 class="no-places"> There is nothing to show! please add some places</h2>
             <div class="grid-container">
-                <div class="heading heading-name"> NAME </div>
+                <!-- <div class="heading heading-name"> NAME </div>
                 <div class="heading heading-address"> ADDRESS </div>
                 <div class="heading heading-rating"> RATING </div>
                 <div class="heading heading-picture"> PICTURE </div>
@@ -86,7 +87,7 @@
                 <div class="details details-action">
                     <button class="deletebtn">DELETE</button>
                     <button class="updatebtn">UPDATE</button>
-                </div>
+                </div> -->
             </div>
             <button class="addplacebtn">
                 <a href="newtouristplace.html" class="gotoformpage">Create New Tourist Place</a>
