--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
             <button class="addplacebtn">
                 <a href="newtouristplace.html" class="gotoformpage">Create New Tourist Place</a>
             </button>
+            <input type="text" class="searched-name" placeholder="Search by place name">
         </div>
     </body>
 </html>
