implementing jQuery and Canvas (to show image by selecting file) DONE

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>  Add New Place </title>
         <link rel="stylesheet" href="style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script async src="tweak.js"> </script>
     </head>
     <body>
@@ -45,6 +46,7 @@
                         </div>
                         <div class="col-70">
                             <input type="file" id="picture" class="picture" name="picture" accept="image/,.jpg,.jpeg,.png" required>
+                            <canvas id="canvas"> </canvas>
                         </div>
                     </div>
                     <div class="row">
